styles(docs): avoid rendering empty scrollbar in the section navigation

--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -177,7 +177,7 @@
     position: sticky;
     top: 1rem;
     max-height: calc(100vh - 2rem);
-    overflow-y: scroll;
+    overflow-y: auto;
 
     @include breakpoint(medium down) {
       position: unset;
